Package name oops

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "SimpleWare",
+	"name": "simpleware",
 	"description": "Exremely simple Router and Middleware objects",
 	"version": "0.1.0",
 	"author": "download <download333@gmail.com>",
